# PixelAI

./: .gitignore  README.md  pyproject.toml
pixelai/: train.py
pixelai/config/: default.py
pixelai/datasets/: collate.py  data_reader.py  dataset_utils.py
pixelai/datasets/augmentation/: augmentation_utils.py
pixelai/inference/: pixelai_pipeline.py
pixelai/models/: embeddings.py  pixel_model.py  scheduler.py  transformer_blocks.py
pixelai/utils/: logging.py  model_utils.py
tests/: test_scheduler.py
